examples/datalog/10_edge_cases/36_very_wide.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_very_wide
Knowledge graph 'test_very_wide' created.
Switched to knowledge graph: test_very_wide
> .kg use test_very_wide
Switched to knowledge graph: test_very_wide
> +wide12[(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)].
Inserted 1 fact(s) into 'wide12'.
> ?- wide12(A, B, C, D, E, F, G, H, I, J, K, L).
1 rows:
  (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)
> subset(A, F, L) :- wide12(A, _, _, _, _, F, _, _, _, _, _, L).
1 rows:
  (1, 6, 12)
(session: 1 rule(s))
> ?- subset(A, F, L).
1 rows:
  (1, 6, 12)
> sum_cols(S) :- wide12(A, B, C, _, _, _, _, _, _, _, _, _), S = A + B + C.
Script error: Query execution failed: Unsafe rule: Atom { relation: "sum_cols", args: [Variable("S")] }. Variables ["S"] in head do not appear in positive body atoms.
