examples/datalog/10_edge_cases/36_very_wide.dl
% Test: Very wide tuple (10+ columns)
% Expected: Wide tuples handled correctly
% Category: 10_edge_cases
% Priority: P1 - Boundary conditions

.kg create test_very_wide
.kg use test_very_wide

% 12-column tuple
+wide12[(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12)].

?- wide12(A, B, C, D, E, F, G, H, I, J, K, L).

% Project subset
subset(A, F, L) :- wide12(A, _, _, _, _, F, _, _, _, _, _, L).

?- subset(A, F, L).

% Sum some columns
sum_cols(S) :- wide12(A, B, C, _, _, _, _, _, _, _, _, _), S = A + B + C.

?- sum_cols(S).

.kg use default
.kg drop test_very_wide
